feat(order-service): implement order management microservice
Adds bookstore-order-service as a second microservice with full hexagonal
architecture (domain → application → adapters). Includes:

- Domain: Order aggregate, OrderItem value object, OrderStatus transitions
- Application: CreateOrder, GetOrder, ListOrders, CancelOrder use cases
  with ownership enforcement at the service layer
- Adapters: REST controller, JPA persistence (BINARY(16) + OrderItemJpaEntity
  with @OneToMany), Feign client for book validation, RS256 JWT validator
- Observability: CorrelationIdFilter (X-Correlation-Id MDC propagation),
  JwtPropagationInterceptor forwards token + correlation ID to bookstore-api,
  logback-spring.xml includes correlationId in every log line
- Swagger/OpenAPI with cross-service spec dropdown
- Actuator health/info endpoints

Also updates bookstore-api for BINARY(16) UUID storage, stream modernization,
and matching observability/actuator config.